# codebase-indexer-mcp

./: .codeindexignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CodebaseIndexer.sln  CodebaseIndexer.slnx  Directory.Build.props  LICENSE  README.md  amd_gpu_diagnostic.txt  aspire-manifest.json  docker-compose.amd.wsl2.yml  docker-compose.amd.yml  docker-compose.aspire.colbert.gpu.yml  docker-compose.aspire.neo4j.yml  docker-compose.aspire.yml  docker-compose.colbert-worker.gpu.yml  docker-compose.colbert-worker.yml  docker-compose.gpu.yml  docker-compose.neo4j.yml  docker-compose.ollama.gpu.yml  docker-compose.ollama.yml  docker-compose.tei.amd64-mkl.yml  docker-compose.tei.gpu.yml  docker-compose.tei.yml  docker-compose.yml  docker-logs.txt  tmp.txt  tmp_output.txt
benchmarks/: pyproject.toml
benchmarks/benchmarks/: __init__.py  _connectivity.py  _settings.py  baseline.json  bench.py  bench_colbert_sidecar.py  candidates.py  chunk_id.py  corpus.py  eval_multihop.py  eval_retrieval.py  export_ragas_dataset.py  label_anchor.py  multihop_rrf.py  search_result.py  suggest_labels.py  tune_colbert_env.py  tune_rss_env.py  verify_candidate.py
benchmarks/benchmarks/fixtures/: eval_baseline.json  golden_queries.jsonl  model_candidates.yaml
benchmarks/benchmarks/train/: README.md  _positives.py  _schema.py  eval_finetuned_checkpoint.py  finetune_qwen3_code.py  mine_hard_negatives.py
benchmarks/tests/: conftest.py  test_aspire_compose.py  test_eval_retrieval.py  test_label_anchor.py  test_run_compose_integration_gpu.py  test_tune_alloc.py
benchmarks/tests/fixtures/adr_tracker/: expected_summary.md  schema.yaml
benchmarks/tests/fixtures/adr_tracker/events/: 0001-phase-1-2026-01-02-implementation.yaml  0002-phase-1-2026-01-03-merge.yaml
benchmarks/tests/fixtures/adr_tracker/phases/: 0001-phase-1.yaml  0002-phase-1.yaml
mcp_server/: Dockerfile  docker-entrypoint.sh  pyproject.toml
mcp_server/benchmarks/: _connectivity.py  _settings.py  bench.py  bench_colbert_sidecar.py  candidates.py  eval_multihop.py  eval_retrieval.py  label_anchor.py  multihop_rrf.py  suggest_labels.py  tune_colbert_env.py  tune_rss_env.py  verify_candidate.py
mcp_server/benchmarks/fixtures/: eval_baseline.json  eval_baseline_jina.json  golden_queries.jsonl
mcp_server/benchmarks/train/: README.md  __init__.py  _split.py  export_golden_pairs.py
mcp_server/scripts/: smoke_recommend_code.py  test_adaptive_live.py
mcp_server/src/codebase_indexer/: __init__.py  config.py  context.py  index_jobs.py  main.py  memory.py  stdio_proxy.py
mcp_server/src/codebase_indexer/colbert_worker/: __init__.py  app.py  cuda.py  main.py  settings.py
mcp_server/src/codebase_indexer/indexer/: __init__.py  chunker.py  embedder.py  graph_writer.py  languages.py  pipeline.py  scanner.py  tokenizer_loader.py  truncation.py
mcp_server/src/codebase_indexer/indexer/backends/: __init__.py  base.py  colbert_onnx.py  (+6 more)
mcp_server/src/codebase_indexer/storage/: __init__.py  neo4j.py  qdrant.py
mcp_server/src/codebase_indexer/telemetry/: __init__.py  metrics.py
mcp_server/src/codebase_indexer/tools/: __init__.py  build_deps.py  chunk.py  collections.py  cross_references.py  graph_search.py  index.py  outliers.py  outline.py  recommend.py  search.py  search_common.py  service_map.py  summary.py  symbols.py
mcp_server/tests/: __init__.py  conftest.py  test_accelerator.py  test_bearer_auth.py  test_bench_colbert_sidecar.py  test_benchmarks.py  test_build_deps.py  test_candidate_config.py  test_chunk_tool.py  test_chunker.py  test_colbert_backend.py  test_colbert_onnx_cuda.py  test_colbert_remote_backend.py  test_colbert_rerank_slow.py  test_colbert_sidecar_gpu_slow.py  test_colbert_worker.py  test_compose_files.py  test_config.py  test_cross_references.py  test_embedder_batch.py  test_embedder_device.py  test_eval_multihop.py  test_eval_retrieval.py  test_export_golden_pairs.py  test_export_ragas_dataset.py  test_factory.py  test_finetune_mrr.py  test_graph_expand_integration.py  test_graph_search.py  test_graph_writer.py  test_harness_reproducibility.py  test_index_all.py  test_index_status.py  test_label_anchor.py  test_main.py  test_mine_hard_negatives.py  test_model_candidates.py  test_multihop_rrf.py  test_neo4j_call_site_integration.py  test_neo4j_storage.py  (+25 more)
(+753 files in other folders)
