[project]
name = "codebase-indexer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.3.0",
    "fastmcp>=2.0.0",
    "qdrant-client[fastembed]>=1.9.0",  # fastembed enables BM25 sparse vectors
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "gitpython>=3.1.43",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "pathspec>=0.12.1",
    "aiofiles>=24.1.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_indexer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Benchmarks are opt-in (run with `pytest -m benchmark`); excluded by default
# because they load embedding models and need a reachable Qdrant.
addopts = "-m 'not benchmark'"
markers = [
    "benchmark: performance benchmark (needs Qdrant; excluded from default run)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
